Import of BKB/WWW-Ideone-0.04 from CPAN.
gitpan-cpan-distribution: WWW-Ideone
gitpan-cpan-version:      0.04
gitpan-cpan-path:         BKB/WWW-Ideone-0.04.tar.gz
gitpan-cpan-author:       BKB
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for perl module WWW::Ideone
 
+0.04 2014-02-08
+
+* Remove bad file from distribution.
+
 0.03 2014-02-07
 
 * Add README, Changes, minimum Perl version.
